# terma-ai

./: .gitignore  BUILD_INSTRUCTIONS.md  Dockerfile  LICENSE  MANIFEST.in  PACKAGING_SUMMARY.md  PYPI_DEPLOYMENT.md  README.md  ROADMAP.md  UPLOAD_TO_PYPI.sh  main.py  pyproject.toml  requirements.txt
termai/: __init__.py  __main__.py  cli.py  settings.yaml
termai/core/: __init__.py  api_setup.py  autofix.py  conversational.py  display.py  executor.py  file_helper.py  git_assistant.py  goal_agent.py  llm.py  network_diagnostic.py  planner.py  preferences.py  react_agent.py  safety.py  setup_wizard.py  shell.py  system_info.py  teaching.py  troubleshoot.py
tests/: __init__.py  test_executor.py  test_llm.py  test_safety.py
